// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Separator > renders correctly with class 1`] = `
<div>
  <div class="border-default border-solid border-t my-4 shrink-0 w-full" data-orientation="horizontal" data-slot="base" role="separator"></div>
</div>
`;

exports[`Separator > renders correctly with decorative 1`] = `
<div>
  <div class="border-default border-solid border-t shrink-0 w-full" data-orientation="horizontal" data-slot="base" role="none"></div>
</div>
`;

exports[`Separator > renders correctly with orientation horizontal 1`] = `
<div>
  <div class="border-default border-solid border-t shrink-0 w-full" data-orientation="horizontal" data-slot="base" role="separator"></div>
</div>
`;

exports[`Separator > renders correctly with orientation vertical 1`] = `
<div>
  <div aria-orientation="vertical" class="border-default border-s border-solid h-full shrink-0" data-orientation="vertical" data-slot="base" role="separator"></div>
</div>
`;

exports[`Separator > renders correctly with size lg 1`] = `
<div>
  <div class="border-default border-solid border-t-4 shrink-0 w-full" data-orientation="horizontal" data-slot="base" role="separator"></div>
</div>
`;

exports[`Separator > renders correctly with size md 1`] = `
<div>
  <div class="border-default border-solid border-t-3 shrink-0 w-full" data-orientation="horizontal" data-slot="base" role="separator"></div>
</div>
`;

exports[`Separator > renders correctly with size sm 1`] = `
<div>
  <div class="border-default border-solid border-t-2 shrink-0 w-full" data-orientation="horizontal" data-slot="base" role="separator"></div>
</div>
`;

exports[`Separator > renders correctly with size xl 1`] = `
<div>
  <div class="border-default border-solid border-t-5 shrink-0 w-full" data-orientation="horizontal" data-slot="base" role="separator"></div>
</div>
`;

exports[`Separator > renders correctly with size xs 1`] = `
<div>
  <div class="border-default border-solid border-t shrink-0 w-full" data-orientation="horizontal" data-slot="base" role="separator"></div>
</div>
`;

exports[`Separator > renders correctly with ui 1`] = `
<div>
  <div class="border-primary border-solid border-t shrink-0 w-full" data-orientation="horizontal" data-slot="base" role="separator"></div>
</div>
`;
